# Agent-Runtime-Evaluation-Platform

./: .coveragerc  .dockerignore  .env.docker  .env.example  .gitignore  ADAPTERS.md  AGENTS.md  DEEPSEEK_SETUP.md  Dockerfile  INTEGRATION_GUIDE.md  LICENSE  Makefile  PORTS.md  PROJECT_SUMMARY.md  README.md  USAGE_GUIDE.md  alembic.ini  docker-compose.yml  download_reranker.py  example_evaluation.py  main.py  pyproject.toml  reasonix.toml  requirements.txt  sandbox.Dockerfile  start.bat  test_api.py  test_deepseek.py  test_eval.py
.claude/plans/: fix-duplicates.md  remove-sandbox.md  replace-agent-hooks-with-sdk.md
.github/workflows/: build.yml  ci.yml
agent-hooks/: README.md  setup.py
agent-hooks/agent_hooks/: __init__.py  defaults.py  emitter.py  protocol.py
alembic/: env.py
alembic/versions/: 03ffaa8a77bf_add_retrieval_score_and_retrieval_.py  29537dc804f8_add_workspace_resource_quotas.py  3dc319af12ba_add_versioning_columns.py  68b1d0ea2480_initial_schema.py  a1b2c3d4e5f6_remove_workspace_tables.py  abd4cf3dc23d_multi_tenancy_workspaces_audit.py  c4e8f2a91b03_add_workspace_id_to_agent_tasks.py
app/: __init__.py  celery_app.py  constants.py  main.py
app/adapters/: __init__.py  callback.py  langgraph.py  llm_proxy.py
app/agent_runtime/: __init__.py  graph.py  llm_factory.py  mock_executor.py  prompts.py  prompts_compat.py  runner.py  state.py  trajectory_recorder.py
app/agents/: __init__.py  base.py  example_agent.py
app/api/: auth_middleware.py  correlation_id_middleware.py  metrics_middleware.py  rate_limit_middleware.py  workspace.py  workspace_context.py  workspace_endpoints.py
app/benchmarks/: __init__.py  monotonicity.py  monotonicity_data.py  run_ci_gate.py
app/collectors/: __init__.py  inprocess_transport.py  trajectory.py
app/core/: __init__.py  cache.py  config.py  eval_diagnostics.py  (+3 more)
cv_docs/: agent-engineering-deep-dive.md  agent-engineering-methods.md
docs/: 1-Multi-Task.md  1-sandbox.md  1-截图信息.md  adapters.md  agent-hooks-integration.md  api.md  architecture-data-flow.md  architecture.md  code-map.md  complete-evaluation-platform.md  complete-wiki-agent.md  conventions.md  data-collection-architecture.md  deep-dive-evaluation-platform.md  deep-dive-wiki-agent.md  deploy-docker.md  design.md  developer_guide.md  getting_started.md  info.md  interview-prep-guide.md  interview-questions-agent-developer.md  interview_questions_agent_dev.md  learning-roadmap.md  platform-overview.md  ports.md  project-issues.md  project-learning-guide.md  tech-stack-overview.md  tech-stack-rationale.md  two-flow-architecture.md  wiki-agent-difficult-points.md  wiki-agent-learning-guide.md  wiki-agent-memory-architecture.md  wiki-agent-optimization-report.md  wiki-agent-overview.md  wiki-to-evaluation-flow.md
example/: example_evaluation.py  sdk_demo.py
frontend/: README.md  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
nginx/: nginx.conf
output/: zhanyong_weekly_2026-06-16_2026-06-22.md
prompts/: __init__.py  loader.py
scripts/: __init__.py  _build_interview_answer_bank.py  _fixtures.py  benchmark_consistency.py  benchmark_evaluators.py  benchmark_multimodel.py  benchmark_score_distribution.py  docker-entrypoint.sh  eval_evaluator_accuracy.py  eval_query_rewrite_ab.py  eval_retrieval_standalone.py  generate_interview_answers.py  interview_answer_bank.py
sdk/: README.md  __init__.py  collector.py  pyproject.toml  requirements.txt  schemas.py
sdk/adapters/: __init__.py  callback.py  langgraph.py  llm_proxy.py
sdk/examples/: basic_usage.py  langchain_example.py
sdk/src/agent_eval_sdk/: __init__.py  config.py  exceptions.py  models.py
sdk/src/agent_eval_sdk/core/: collector.py  reporter.py  tracker.py
sdk/src/agent_eval_sdk/integrations/: decorator.py  langchain_callback.py
tests/: __init__.py  benchmark_evaluators.py  benchmark_multimodel.py  benchmark_score_distribution.py  conftest.py  eval_evaluator_accuracy.py  eval_retrieval.py  eval_retrieval_standalone.py  test_adapters.py  test_agent_runtime.py  test_api.py  test_collector_session.py  test_diff_service.py  test_evaluation_fixes.py  test_evaluation_service.py  test_evaluators.py  test_golden_suite.py  test_incremental_eval.py  test_judge_service.py  test_llm_trace.py  test_logging_tracing.py  test_mock_and_versioning.py  test_prompt_loader.py  test_prompt_manager.py  test_quota.py  test_regression_detection.py  test_replay_service.py  test_run_legacy.py  test_sandbox.py  test_search_rerank.py  test_vector_admin.py  test_vector_store.py  test_wiki_plan_rerank.py  test_workspace.py
(+422 files in other folders)
