[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "sdk"]

[project]
name = "agent-eval-platform"
version = "0.1.0"
description = "Agent Runtime Evaluation Platform - Evaluate Planning, Tool Use, Memory, and Replanning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",

    # LangGraph & LangChain
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",

    # Wiki Agent
    "langchain-text-splitters>=0.3.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "pymilvus[milvus_lite]>=2.4.0",
    "milvus-lite>=2.4.0",
    "sentence-transformers>=3.0.0",
    "gitpython>=3.1.0",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "pyyaml>=6.0.0",

    # Database
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # Redis (for caching and message queue)
    "redis>=5.0.1",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyjwt>=2.8.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",

    # Observability
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.11",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
